--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -22,6 +22,9 @@ enable_multithreading = false
 # 'scenario' clears the objects after the execution of each scenario, new objects are created for next execution.
 gauge_clear_state_level = scenario
 
+# Port assigned for the flash plugin
+flash_server_port = 8000
+
 # Browser
 browser = chrome
 
