--- a/env/qa/qa.properties
+++ b/env/qa/qa.properties
@@ -22,8 +22,11 @@ enable_multithreading = false
 # 'scenario' clears the objects after the execution of each scenario, new objects are created for next execution.
 gauge_clear_state_level = scenario
 
+# Port assigned for the flash plugin
+flash_server_port = 8000
+
 # Browser
-browser = chrome
+browser = headless-chrome
 
 # Base URL
 application_endpoint = http://newtours.demoaut.com
