--- a/env/qa/qa.properties
+++ b/env/qa/qa.properties
@@ -26,7 +26,7 @@ gauge_clear_state_level = scenario
 flash_server_port = 8000
 
 # Browser
-browser = headless-chrome
+browser = headless-firefox
 
 # Base URL
 application_endpoint = http://newtours.demoaut.com
