--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -29,4 +29,4 @@ flash_server_port = 8000
 browser = chrome
 
 # Base URL
-application_endpoint = http://newtours.demoaut.com
+application_endpoint = http://automationpractice.com/index.php?controller=authentication&back=my-account
