--- a/env/qa/qa.properties
+++ b/env/qa/qa.properties
@@ -29,4 +29,4 @@ flash_server_port = 8000
 browser = headless-firefox
 
 # Base URL
-application_endpoint = http://newtours.demoaut.com
+application_endpoint = http://automationpractice.com/index.php?controller=authentication&back=my-account
