--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -19,6 +19,14 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Build and Test with Maven
+        java-version: 1.8    
+    - name: Add Gauge's GPG key
+      run: sudo apt-key adv --keyserver hkp://pool.sks-keyservers.net --recv-keys 023EDB0B
+    - name: Add Gauge to the repository list
+      run: echo deb https://dl.bintray.com/gauge/gauge-deb stable main | sudo tee -a /etc/apt/sources.list   
+    - name: Install Gauge
+      run: sudo apt-get update && sudo apt-get install gauge
+    - name: Install Gauge-Java plugin
+      run: gauge install java --version 0.7.4
+    - name: Build Test with Maven
       run: mvn test-compile gauge:execute -DspecsDir="specs" -Denv="dev"
