--- a/env/default/default.properties
+++ b/env/default/default.properties
@@ -28,5 +28,5 @@ flash_server_port = 8000
 # Browser
 browser = chrome
 
-# Base URL
-application_endpoint = http://automationpractice.com/index.php?controller=authentication&back=my-account
+# Application URL
+application_endpoint = https://demoblaze.com/
